# vibe-teaching

./: .gitignore  29-32  AGENTS.md  README.md  pyproject.toml
.pi-subagents/artifacts/: 1965f387_worker_0_input.md  1965f387_worker_0_meta.json  1965f387_worker_0_output.md  1965f387_worker_0_transcript.jsonl  43e99589_docs-writer_0_input.md  43e99589_docs-writer_0_meta.json  43e99589_docs-writer_0_output.md  43e99589_docs-writer_0_transcript.jsonl  43e99589_docs-writer_1_input.md  43e99589_docs-writer_1_meta.json  43e99589_docs-writer_1_output.md  43e99589_docs-writer_1_transcript.jsonl  43e99589_docs-writer_2_input.md  43e99589_docs-writer_2_meta.json  43e99589_docs-writer_2_output.md  43e99589_docs-writer_2_transcript.jsonl  51d98b7d_worker_0_input.md  51d98b7d_worker_0_meta.json  51d98b7d_worker_0_output.md  51d98b7d_worker_0_transcript.jsonl  (+11 more)
docs/: lecture_workflow.md  ocr_setup.md
exercises/: term01_lec01_introduction_to_seismic_processing.md  term01_lec02_kinematics_and_field_statics.md  term01_lec03_advanced_statics_and_velocity_link.md  term01_lec03_kinematics_and_field_statics.md  term01_lec04_advanced_statics_and_velocity_link.md  term01_lec06_single_channel_deconvolution.md  term01_lec07_surface_consistent_deconvolution.md
papers/: _organization_report.csv  _organization_report.json
scripts/: apply_paper_organization.py  build_slides.py  extract_source_text.py  extract_source_text_ocr.py  lint_wiki.py  organize_papers.py  render_lecture.py  tex_header.tex
tools/: unlimited_ocr_chat_template.jinja
wiki/: README.md  index.md  log.md
(+299 files in other folders)
