[project]
name = "vibe-teaching"
version = "0.1.0"
description = "Teaching materials and tooling for an undergraduate seismic data processing course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pymupdf>=1.27.2.3",
    "pypandoc>=1.17",
    "python-pptx>=1.0.2",
    "scipy>=1.18.0",
]
