[project]
name = "vibe-teaching"
version = "0.1.0"
description = "Teaching materials and tooling for an undergraduate seismic data processing course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pymupdf>=1.27.2.3",
    "pypandoc>=1.17",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "scipy>=1.18.0",
]

[project.optional-dependencies]
ocr = [
    "huggingface-hub>=0.25.0",
    "requests>=2.32.0",
]

[project.urls]
Repository = "https://github.com/your-org/vibe-teaching"
